style.css
html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  overflow: hidden;
}
*,
*:after,
*:before {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}
:root {
  --icon-size: 24;
}
.flex {
  display: flex;
}
.container {
  position: relative;
  width: 100%;
}
#container {
  display: none;
  color: white;
  font-family: sans-serif;
}
@media screen and (min-width: 1280px) {
  #container {
    max-width: 33vw;
  }
}
html.fishing #container {
  display: block;
}
#header, #footer {
  background: rgba(10,10,10,.5);
}
#header {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}
#header > * {
  padding: 0.5rem;
}
#spot:empty::before {
  content: 'Unknown';
  opacity: 0.7;
}
#timer:empty::before {
  content: '0.0';
}
#entries {
  position: relative;
}
#spot {
  flex-basis: 100%;
}
#marker {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}
.markline {
  display: none;
  width: 0;
  height: 100%;
  border-right: 3px solid black;
  /* This is very important! If not set it will default to ease and not align with min max records! */
  animation-timing-function: linear;
  /* Stays at 100% once finished */
  animation-fill-mode: forwards;
}
.markline[data-dur="30"] {
  animation-duration: 30s;
}
.markline[data-dur="60"] {
  animation-duration: 60s;
}
html.long-cast .markline[data-dur="60"] {
  animation-delay: -30s;
}
html.fishing .markline {
  display: block;
}
html.marker-animated .markline {
  animation-name: slidein;
}
html.marker-paused .markline {
  animation-play-state: paused;
}
@keyframes slidein {
  from {
      width: 0;
  }
  to {
      width: 100%;
  }
}
.fish {
  max-height: calc(var(--icon-size) * 1px);
}
[data-fishid]:not(:nth-of-type(2)) {
  margin-top: 1px;
}
.icon, .offset {
  width: calc(var(--icon-size) * 1px);
  flex-shrink: 0;
}
.icon img {
  display: block; /* Get rid of unnecessary spacing at the bottom */
  width: auto;
  height: 100%;
}
.label {
  position: relative;
  width: 100%;
}
.label .name {
  font-weight: bold;
  align-self: center;
  z-index: 2;
}
.label .name:not(:empty) {
  padding-left: 0.5rem;
}
.record,
.record-chum {
  position: absolute;
  display: none;
  min-width: 2px;
  height: 100%;
  background-color: rgba(10,10,10,.5);
}
html.chum-records .record-chum[data-min],
html:not(.chum-records) .record[data-min] {
  display: block;
}
.light .label {
  background-color: rgb(50, 205, 50, .5);
}
.medium .label {
  background-color: rgb(255, 215, 0, .5);
}
.heavy .label {
  background-color: rgb(165, 42, 42, .5);
}
#footer {
  height: 16px;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
  font-size: x-small;
  text-transform: uppercase;
  padding: .15rem;
  display: flex;
  justify-content: right;
}
#footer .settings {
  opacity: 0;
  padding: 0 .15rem;
  cursor: pointer;
}
#footer .settings:hover {
  opacity: 1;
}
#footer input {
  display: none;
  width: 0px;
  height: 0px;
}

